--- a/CSSComponent.astro
+++ b/CSSComponent.astro
@@ -3,7 +3,7 @@ import {
   addComponentForURL,
   addGlobalComponent,
   getComponentsForURL,
-  getComponentByName,
+  getComponentByName
 } from "./library.js"
 
 const {
@@ -11,6 +11,7 @@ const {
   global = false,
   getForURL = false,
   getByName = undefined,
+  conditional = true
 } = Astro.props
 const { url } = Astro.request
 
@@ -24,7 +25,7 @@ if (getByName) {
   components = [getComponentByName(getByName, url)]
 }
 
-if (register) {
+if (register && conditional) {
   if (global) {
     addGlobalComponent(register)
   } else {
